# ecommerce

./: .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
ecommerce/: settings.py  urls.py  wsgi.py
ecommerce/dashboard/: apps.py
ecommerce/dashboard/fixtures/: db_admin_fixture.json
ecommerce/dashboard/tests/: test_selenium_dashboard.py
ecommerce/demo/: apps.py  urls.py  views.py
ecommerce/demo/management/commands/: load-fixtures.py
ecommerce/demo/templates/: index.html  product_by_category.html  product_detail.html
ecommerce/drf/: serializer.py  views.py
ecommerce/inventory/: apps.py  documents.py  models.py
ecommerce/inventory/tests/: test_db_fixtures.py
ecommerce/search/: views.py
ecommerce/tests/: factories.py  fixtures.py  selenium.py
